--- a/ProyectoDI_GrupoD/Vistas/PantallaPrincipal.resx
+++ b/ProyectoDI_GrupoD/Vistas/PantallaPrincipal.resx
@@ -118,48 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="NombreUsuario.ButtonImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="imgBtnUsuario.ButtonImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAETSURBVEhL3ZVB
-        TsMwEEWzag/RLXALWCC4TeE8VelZUAGJwgpWwCVaCdp9eB//rEKSsSM2POlJVT1/7NpOWg1R1/UUr/EJ
-        D1afr3DqsjJoMMNX7OIFZy7Pg6BW3te8QZPk/xJC2pYoc8fiEHpO2RAbx+IQ2qdsiL1jcRRK2RCfjsUh
-        9OdbpHsepeiQdU11BYdQzcSxPAjqQeubpPxBa6DBBOe4QR28fPR3ZSv/X7ANl3iDH9i8Td9xiRcuy4fw
-        Cd7hEGs8diwGgTPcKR1ki6eO90OhVp7TvEGTHLlNNxTd/pSXsXab36FABzqWc7drw+Aq1Yxi4XZtGNRV
-        HMub27VhMOc/oIsvt2vD4EOqGcW920FVfQN9cVxMuXp46QAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="imageButton1.ButtonImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAETSURBVEhL3ZVB
-        TsMwEEWzag/RLXALWCC4TeE8VelZUAGJwgpWwCVaCdp9eB//rEKSsSM2POlJVT1/7NpOWg1R1/UUr/EJ
-        D1afr3DqsjJoMMNX7OIFZy7Pg6BW3te8QZPk/xJC2pYoc8fiEHpO2RAbx+IQ2qdsiL1jcRRK2RCfjsUh
-        9OdbpHsepeiQdU11BYdQzcSxPAjqQeubpPxBa6DBBOe4QR28fPR3ZSv/X7ANl3iDH9i8Td9xiRcuy4fw
-        Cd7hEGs8diwGgTPcKR1ki6eO90OhVp7TvEGTHLlNNxTd/pSXsXab36FABzqWc7drw+Aq1Yxi4XZtGNRV
-        HMub27VhMOc/oIsvt2vD4EOqGcW920FVfQN9cVxMuXp46QAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="imageButton2.ButtonImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAETSURBVEhL3ZVB
-        TsMwEEWzag/RLXALWCC4TeE8VelZUAGJwgpWwCVaCdp9eB//rEKSsSM2POlJVT1/7NpOWg1R1/UUr/EJ
-        D1afr3DqsjJoMMNX7OIFZy7Pg6BW3te8QZPk/xJC2pYoc8fiEHpO2RAbx+IQ2qdsiL1jcRRK2RCfjsUh
-        9OdbpHsepeiQdU11BYdQzcSxPAjqQeubpPxBa6DBBOe4QR28fPR3ZSv/X7ANl3iDH9i8Td9xiRcuy4fw
-        Cd7hEGs8diwGgTPcKR1ki6eO90OhVp7TvEGTHLlNNxTd/pSXsXab36FABzqWc7drw+Aq1Yxi4XZtGNRV
-        HMub27VhMOc/oIsvt2vD4EOqGcW920FVfQN9cVxMuXp46QAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="imageButton3.ButtonImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAETSURBVEhL3ZVB
-        TsMwEEWzag/RLXALWCC4TeE8VelZUAGJwgpWwCVaCdp9eB//rEKSsSM2POlJVT1/7NpOWg1R1/UUr/EJ
-        D1afr3DqsjJoMMNX7OIFZy7Pg6BW3te8QZPk/xJC2pYoc8fiEHpO2RAbx+IQ2qdsiL1jcRRK2RCfjsUh
-        9OdbpHsepeiQdU11BYdQzcSxPAjqQeubpPxBa6DBBOe4QR28fPR3ZSv/X7ANl3iDH9i8Td9xiRcuy4fw
-        Cd7hEGs8diwGgTPcKR1ki6eO90OhVp7TvEGTHLlNNxTd/pSXsXab36FABzqWc7drw+Aq1Yxi4XZtGNRV
-        HMub27VhMOc/oIsvt2vD4EOqGcW920FVfQN9cVxMuXp46QAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABE0lEQVRIS92VQU7DMBBFs2oP0S1wC1gguE3hPFXpWVABicIKVsAlWgnafXgf/6xCkrEjNjzpSVU9
+        f+zaTloNUdf1FK/xCQ9Wn69w6rIyaDDDV+ziBWcuz4OgVt7XvEGT5P8SQtqWKHPH4hB6TtkQG8fiENqn
+        bIi9Y3EUStkQn47FIfTnW6R7HqXokHVNdQWHUM3EsTwI6kHrm6T8QWugwQTnuEEdvHz0d2Ur/1+wDZd4
+        gx/YvE3fcYkXLsuH8Ane4RBrPHYsBoEz3CkdZIunjvdDoVae07xBkxy5TTcU3f6Ul7F2m9+hQAc6lnO3
+        a8PgKtWMYuF2bRjUVRzLm9u1YTDnP6CLL7drw+BDqhnFvdtBVX0DfXFcTLl6eOkAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
