--- a/ProyectoDI_GrupoD/Vistas/RegistroAdmin.resx
+++ b/ProyectoDI_GrupoD/Vistas/RegistroAdmin.resx
@@ -117,56 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="ojo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\ojo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnojoCerradoValidarRe.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEPSURBVDhP1dEx
+        TgJREMbxjR0kGOgkNsA5SEAbOvAKGC0wJAYqCm+ACpWN4QBaYEfwBJzARI0cAIOd/fL/8HvFi1yASX4h
+        82Zm5y2b7F+kaVrD2OnuoOEQZ+ijiwYOUMUKp26Ng0IO9/jBDHcY4QYn+EXT7XFQqOATjzhCHhcooQ5t
+        foJ6Kh77Cw4y+MDAuV7hC0OEzS3XBnhHRvk2SM4xdar8EhoOmxfouKz6FG2n24O2Dp0qL0ObNayHPOPK
+        ZdVfED1Ar/CGvnMN6drarOElCq79fwUFB8cuhmu30LECiphAf2LZY3FQ0PA31phDn1ReoU97i5zb46AQ
+        Nus3iyau0YNus3swBA0PqDndm0iSDbHIe5MEIWdkAAAAAElFTkSuQmCC
+</value>
   </data>
-  <data name="KAEGYM1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\KAEGYM.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnojoAbiertoValidarRe.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEhSURBVDhPtZNN
+        LgRRFEYLE90L6UabNWsgLKXtATHVTPwNRMQuhGlbghiwA/8SCZN2TvkqqaQHugducpJ3v/vdm/fqvSr+
+        NYbD4ZQkHS9oWIYTuIOP4PoYlmIbDYpNsPELvsNnqHJrR9BI228g2HwNmp5hE1owHdqwBS+g5wqaaS8H
+        XKRwD61oi7AXOtEcpEfvmZrieoRHWIhm83t0cV0N6YBe9VWFmyQ9DQbr/Wh1+ilb70UbmAyS1Ae47Xqz
+        7KZsfSNaOWAtiduqb7N+hDeoH+8p+oqa4nkEP1A7mkP6oWqegwfQe6pWBonX6NVY8Kq2QbNXOAPzsAOv
+        oOcSRt5CAw7hr4d0ALNpGw2KXfC13UL1lF07vBvbeEHD5D/TZFEUP+okFeZ2q87IAAAAAElFTkSuQmCC
+</value>
   </data>
-  <data name="KAEGYM" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\KAEGYM.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnojoCerradoRe.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEPSURBVDhP1dEx
+        TgJREMbxjR0kGOgkNsA5SEAbOvAKGC0wJAYqCm+ACpWN4QBaYEfwBJzARI0cAIOd/fL/8HvFi1yASX4h
+        82Zm5y2b7F+kaVrD2OnuoOEQZ+ijiwYOUMUKp26Ng0IO9/jBDHcY4QYn+EXT7XFQqOATjzhCHhcooQ5t
+        foJ6Kh77Cw4y+MDAuV7hC0OEzS3XBnhHRvk2SM4xdar8EhoOmxfouKz6FG2n24O2Dp0qL0ObNayHPOPK
+        ZdVfED1Ar/CGvnMN6drarOElCq79fwUFB8cuhmu30LECiphAf2LZY3FQ0PA31phDn1ReoU97i5zb46AQ
+        Nus3iyau0YNus3swBA0PqDndm0iSDbHIe5MEIWdkAAAAAElFTkSuQmCC
+</value>
   </data>
-  <data name="KAEGYM_Ampliado" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\KAEGYM_Ampliado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="atras" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\atras.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="KAEGYM2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\KAEGYM.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="return" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\return.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ListarActividades" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\ListarActividades.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="AltaUnaActividad" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\AltaUnaActividad.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="atrasSinFondo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\atrasSinFondo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="usuario" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\usuario.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="AltaMonitor" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\AltaMonitor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="inicioFondo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\inicioFondo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ojo_cerrado" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\ojo_cerrado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="AltaMonitorBlanco" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\AltaMonitorBlanco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ListarActividadesBlanco" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\ListarActividadesBlanco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="AltaUnaActividadBlanco" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recursos\AltaUnaActividadBlanco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnojo_abiertoRe.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEhSURBVDhPtZNN
+        LgRRFEYLE90L6UabNWsgLKXtATHVTPwNRMQuhGlbghiwA/8SCZN2TvkqqaQHugducpJ3v/vdm/fqvSr+
+        NYbD4ZQkHS9oWIYTuIOP4PoYlmIbDYpNsPELvsNnqHJrR9BI228g2HwNmp5hE1owHdqwBS+g5wqaaS8H
+        XKRwD61oi7AXOtEcpEfvmZrieoRHWIhm83t0cV0N6YBe9VWFmyQ9DQbr/Wh1+ilb70UbmAyS1Ae47Xqz
+        7KZsfSNaOWAtiduqb7N+hDeoH+8p+oqa4nkEP1A7mkP6oWqegwfQe6pWBonX6NVY8Kq2QbNXOAPzsAOv
+        oOcSRt5CAw7hr4d0ALNpGw2KXfC13UL1lF07vBvbeEHD5D/TZFEUP+okFeZ2q87IAAAAAElFTkSuQmCC
+</value>
   </data>
 </root>
